test/good/ex8.cb
def main() {
    let x = 10;
    let y = 40;
    printInt(add(x,y));
}

def add(x: int, y: int) -> int {
    x + y
}
